# raw-reader

./: Cargo.toml
src/: command.rs  disk_info.rs  main.rs  math_util.rs  pattern.rs
src/command_line/: handle.rs  input.rs  mod.rs  output.rs
src/data/: aligned_buffer.rs  mod.rs
